--- a/React/fetchapi/src/index.css
+++ b/React/fetchapi/src/index.css
@@ -1,6 +1,6 @@
 .container{
     display: flex;
     justify-content: space-around;
-    width: 1000px;
+    min-width: 1000px;
     border: 1px solid black;
 }
