--- a/React/sharepointcopy/src/App.css
+++ b/React/sharepointcopy/src/App.css
@@ -32,3 +32,33 @@ h1{
     text-align: center;
     color: #363535;
 }
+
+@media (max-width: 768px) {
+    /* Mobile-specific styles here */
+   
+    body{
+        left: 20px;
+        
+    }
+    .app {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr); /* Adjust the number of columns for mobile */
+        gap: 20px; /* Increase the gap for mobile */
+      }
+      
+      .load-more-container {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        left: 0; /* Adjust position for mobile screens */
+      }
+      
+      h1 {
+        font-size: 1.5rem;
+        text-align: center;
+        color: #363535;
+      }
+      
+  }
+  
